3rdYear_I/PPL/FullCode/initial/src/grammar/target/generated-sources/antlr4/BKOOLParser.java
// Generated from BKOOL.g4 by ANTLR 4.5.3

  package bkool.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BKOOLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, WS=3, BLANK=4, TAB=5, FORMFEED=6, NEWLINE=7, CRETURN=8, 
		BLOCKCOMMENT=9, COMMENTLINE=10, COMMENT=11, BOOLEAN=12, BREAK=13, CLASS=14, 
		CONTINUE=15, DO=16, ELSE=17, EXTENDS=18, FLOAT=19, IF=20, INTEGER=21, 
		NEW=22, STRING=23, THEN=24, FOR=25, RETURN=26, VOID=27, NIL=28, THIS=29, 
		FINAL=30, DOWNTO=31, STATIC=32, PLUS=33, MUL=34, IN_DIV=35, NOTEQUAL=36, 
		LESS=37, LESSEQUAL=38, OR=39, NOT=40, OBJECTCREAT=41, SUB=42, FLOAT_DIV=43, 
		MODULUS=44, EQUAL=45, GREATER=46, AND=47, GREATEREQUAL=48, CONCAT=49, 
		ASSIGN=50, LSB=51, RSB=52, LP=53, RP=54, LB=55, RB=56, SEMICOLONE=57, 
		COLON=58, DOT=59, COMMA=60, INTLIT=61, BOOLEANLIT=62, FLOATLIT=63, ID=64, 
		STRINGLIT=65, PRIMITIVE_TYPE=66, UNCLOSE_STRING=67, ILLEGAL_ESCAPE=68, 
		ERROR_CHAR=69;
	public static final int
		RULE_type_notvoid = 0, RULE_program = 1, RULE_classDecl = 2, RULE_method_dec = 3, 
		RULE_listPara = 4, RULE_element_type_method = 5, RULE_iden_list = 6, RULE_list_expression = 7, 
		RULE_brace_list_expression = 8, RULE_member = 9, RULE_decl = 10, RULE_constant_dec_global = 11, 
		RULE_variable_dec_global = 12, RULE_element_type = 13, RULE_constant_dec = 14, 
		RULE_variable_dec = 15, RULE_para = 16, RULE_statement = 17, RULE_array_type = 18, 
		RULE_typeArray = 19, RULE_size = 20, RULE_class_type = 21, RULE_domain = 22, 
		RULE_expression = 23, RULE_block_stm = 24, RULE_asignment_statement = 25, 
		RULE_lhs = 26, RULE_if_statement = 27, RULE_for_statement = 28, RULE_scalar_variable = 29, 
		RULE_break_statement = 30, RULE_continue_statement = 31, RULE_return_statement = 32, 
		RULE_method_inovation = 33;
	public static final String[] ruleNames = {
		"type_notvoid", "program", "classDecl", "method_dec", "listPara", "element_type_method", 
		"iden_list", "list_expression", "brace_list_expression", "member", "decl", 
		"constant_dec_global", "variable_dec_global", "element_type", "constant_dec", 
		"variable_dec", "para", "statement", "array_type", "typeArray", "size", 
		"class_type", "domain", "expression", "block_stm", "asignment_statement", 
		"lhs", "if_statement", "for_statement", "scalar_variable", "break_statement", 
		"continue_statement", "return_statement", "method_inovation"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'to'", null, null, null, null, null, null, null, null, null, 
		"'boolean'", "'break'", "'class'", "'continue'", "'do'", "'else'", "'extends'", 
		"'float'", "'if'", "'int'", null, "'string'", "'then'", "'for'", "'return'", 
		"'void'", "'nil'", "'this'", "'final'", "'downto'", "'static'", "'+'", 
		"'*'", "'\\'", "'!='", "'<'", "'<='", "'||'", "'!'", null, "'-'", "'/'", 
		"'%'", "'=='", "'>'", "'&&'", "'>='", "'^'", "':='", "'['", "']'", "'{'", 
		"'}'", "'('", "')'", "';'", "':'", "'.'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "WS", "BLANK", "TAB", "FORMFEED", "NEWLINE", "CRETURN", 
		"BLOCKCOMMENT", "COMMENTLINE", "COMMENT", "BOOLEAN", "BREAK", "CLASS", 
		"CONTINUE", "DO", "ELSE", "EXTENDS", "FLOAT", "IF", "INTEGER", "NEW", 
		"STRING", "THEN", "FOR", "RETURN", "VOID", "NIL", "THIS", "FINAL", "DOWNTO", 
		"STATIC", "PLUS", "MUL", "IN_DIV", "NOTEQUAL", "LESS", "LESSEQUAL", "OR", 
		"NOT", "OBJECTCREAT", "SUB", "FLOAT_DIV", "MODULUS", "EQUAL", "GREATER", 
		"AND", "GREATEREQUAL", "CONCAT", "ASSIGN", "LSB", "RSB", "LP", "RP", "LB", 
		"RB", "SEMICOLONE", "COLON", "DOT", "COMMA", "INTLIT", "BOOLEANLIT", "FLOATLIT", 
		"ID", "STRINGLIT", "PRIMITIVE_TYPE", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
		"ERROR_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BKOOL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BKOOLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Type_notvoidContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(BKOOLParser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(BKOOLParser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(BKOOLParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(BKOOLParser.STRING, 0); }
		public Type_notvoidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_notvoid; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitType_notvoid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_notvoidContext type_notvoid() throws RecognitionException {
		Type_notvoidContext _localctx = new Type_notvoidContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type_notvoid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOLEAN) | (1L << FLOAT) | (1L << INTEGER) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BKOOLParser.EOF, 0); }
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				classDecl();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(BKOOLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BKOOLParser.ID, i);
		}
		public TerminalNode LP() { return getToken(BKOOLParser.LP, 0); }
		public TerminalNode RP() { return getToken(BKOOLParser.RP, 0); }
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(CLASS);
			setState(78);
			match(ID);
			setState(81);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(79);
				match(EXTENDS);
				setState(80);
				match(ID);
				}
			}

			setState(83);
			match(LP);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 12)) & ~0x3f) == 0 && ((1L << (_la - 12)) & ((1L << (BOOLEAN - 12)) | (1L << (FLOAT - 12)) | (1L << (INTEGER - 12)) | (1L << (STRING - 12)) | (1L << (VOID - 12)) | (1L << (FINAL - 12)) | (1L << (STATIC - 12)) | (1L << (ID - 12)))) != 0)) {
				{
				{
				setState(84);
				member();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_decContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public TerminalNode LB() { return getToken(BKOOLParser.LB, 0); }
		public ListParaContext listPara() {
			return getRuleContext(ListParaContext.class,0);
		}
		public TerminalNode RB() { return getToken(BKOOLParser.RB, 0); }
		public Block_stmContext block_stm() {
			return getRuleContext(Block_stmContext.class,0);
		}
		public Element_type_methodContext element_type_method() {
			return getRuleContext(Element_type_methodContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(BKOOLParser.STATIC, 0); }
		public Method_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_dec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitMethod_dec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Method_decContext method_dec() throws RecognitionException {
		Method_decContext _localctx = new Method_decContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(92);
				element_type_method();
				}
				break;
			}
			setState(96);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(95);
				match(STATIC);
				}
			}

			setState(98);
			match(ID);
			setState(99);
			match(LB);
			setState(100);
			listPara();
			setState(101);
			match(RB);
			setState(102);
			block_stm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListParaContext extends ParserRuleContext {
		public List<ParaContext> para() {
			return getRuleContexts(ParaContext.class);
		}
		public ParaContext para(int i) {
			return getRuleContext(ParaContext.class,i);
		}
		public List<TerminalNode> SEMICOLONE() { return getTokens(BKOOLParser.SEMICOLONE); }
		public TerminalNode SEMICOLONE(int i) {
			return getToken(BKOOLParser.SEMICOLONE, i);
		}
		public ListParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listPara; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitListPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListParaContext listPara() throws RecognitionException {
		ListParaContext _localctx = new ListParaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listPara);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(104);
						para();
						setState(105);
						match(SEMICOLONE);
						}
						} 
					}
					setState(111);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(112);
				para();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Element_type_methodContext extends ParserRuleContext {
		public Element_typeContext element_type() {
			return getRuleContext(Element_typeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(BKOOLParser.VOID, 0); }
		public Element_type_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element_type_method; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitElement_type_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Element_type_methodContext element_type_method() throws RecognitionException {
		Element_type_methodContext _localctx = new Element_type_methodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_element_type_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case FLOAT:
			case INTEGER:
			case STRING:
			case ID:
				{
				setState(115);
				element_type();
				}
				break;
			case VOID:
				{
				setState(116);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Iden_listContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(BKOOLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BKOOLParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BKOOLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BKOOLParser.COMMA, i);
		}
		public Iden_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iden_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitIden_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Iden_listContext iden_list() throws RecognitionException {
		Iden_listContext _localctx = new Iden_listContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_iden_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					match(ID);
					setState(120);
					match(COMMA);
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(126);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_expressionContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BKOOLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BKOOLParser.COMMA, i);
		}
		public List_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitList_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final List_expressionContext list_expression() throws RecognitionException {
		List_expressionContext _localctx = new List_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_expression);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_la = _input.LA(1);
			if (((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & ((1L << (NEW - 22)) | (1L << (NIL - 22)) | (1L << (THIS - 22)) | (1L << (PLUS - 22)) | (1L << (NOT - 22)) | (1L << (SUB - 22)) | (1L << (LB - 22)) | (1L << (INTLIT - 22)) | (1L << (BOOLEANLIT - 22)) | (1L << (FLOATLIT - 22)) | (1L << (ID - 22)) | (1L << (STRINGLIT - 22)))) != 0)) {
				{
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						expression(0);
						setState(129);
						match(COMMA);
						}
						} 
					}
					setState(135);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(136);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Brace_list_expressionContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(BKOOLParser.LB, 0); }
		public List_expressionContext list_expression() {
			return getRuleContext(List_expressionContext.class,0);
		}
		public TerminalNode RB() { return getToken(BKOOLParser.RB, 0); }
		public Brace_list_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brace_list_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitBrace_list_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Brace_list_expressionContext brace_list_expression() throws RecognitionException {
		Brace_list_expressionContext _localctx = new Brace_list_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_brace_list_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(LB);
			setState(140);
			list_expression();
			setState(141);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemberContext extends ParserRuleContext {
		public Constant_dec_globalContext constant_dec_global() {
			return getRuleContext(Constant_dec_globalContext.class,0);
		}
		public Variable_dec_globalContext variable_dec_global() {
			return getRuleContext(Variable_dec_globalContext.class,0);
		}
		public Method_decContext method_dec() {
			return getRuleContext(Method_decContext.class,0);
		}
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_member);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				constant_dec_global();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				variable_dec_global();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				method_dec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Constant_decContext constant_dec() {
			return getRuleContext(Constant_decContext.class,0);
		}
		public Variable_decContext variable_dec() {
			return getRuleContext(Variable_decContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BKOOLVisitor ) return ((BKOOLVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(148);
				constant_dec();
				}
				break;
			case 2:
				{
				setState(149);
				variable_dec();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constant_dec_globalContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(BKOOLParser.FINAL, 0); }
		public Element_typeContext element_type() {
			return getRuleContext(Element_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BKOOLParser.ID, 0); }
		public ExpressionContext expression() {
